# auto_insta

./: .gitignore  CLAUDE.md  Makefile  README.md  generate_google_maps_csv.py  locations_for_google_maps.csv  mock_locations.json  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  run_api.py  run_batch.sh  selenium_extraction_report.md  urls.txt  urls_data.txt
api/: __init__.py  main.py  models.py  services.py
docs/: examples.md  python-setup.md  quick-start.md  troubleshooting.md  사용법.md
flutter_app/: pubspec.yaml
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
outputs/: instagram_batch_combined_20250915_001238.json  instagram_batch_combined_20250915_001347.txt  instagram_batch_combined_20250915_100108.json  instagram_batch_combined_20250915_101553.json  instagram_batch_combined_20250915_102855.json  instagram_batch_combined_20250915_103026.json  instagram_batch_combined_20250915_103140.json  instagram_batch_combined_20250915_104853.json  instagram_batch_combined_20250921_154151.json
src/: __init__.py  __main__.py  extractor.py  main.py  selenium_extractor.py  utils.py
tests/: test_extractor.py  test_main.py  test_utils.py
